postgresql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
