postgresql/ingress-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql
  namespace: postgresql
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`k3s.local`) || HostSNI(`postgresql.k3s.local`)
      services:
        - name: postgresql
          port: 5432
  tls: {}
